refactor old project